# montage-horde

./: .gitignore  README.md  main.py  pyproject.toml
.cache/41/: cache.db
agents/: coder.py  executor.py  informationExtractor.py  information_extractor.py  output_formatter.py  planner.py  sentiment_analyst.py  supervisor.py  text-writer.py  translator.py  validator.py
app/: gradio_interface.py
data/: prompts.py
evaluation/: transcriptions.py
examples/: coder.py  docker_helper.py  io_helper.py
utils/: docker_helper.py  io_helper.py  transcription_extractor.py
