[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = "^3.10"
autogen-agentchat = ">=0.2,<1.0"
python-dotenv = "^1.0.1"
autogen-ext = {extras = ["docker", "openai"], version = "^0.4.3"}
asyncio-atexit = "^1.0.1"
gradio = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"