[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
autogen-agentchat = ">=0.2,<1.0"
asyncio-atexit = "^1.0.1"
deepl = "^1.21.0"
python-dotenv = "^1.0.1"
autogen-ext = {extras = ["docker", "openai"], version = "^0.4.3"}
gradio = "^5.13.0"
whisperx = "^3.3.1"
datasets = "^3.2.0"
soundfile = "^0.13.1"
numba = "0.60.0"
librosa = "^0.10.2.post1"
jiwer = "^3.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"